--- a/main.html
+++ b/main.html
@@ -10,6 +10,69 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1 style="text-align: center;">HTML Assignment #3</h1>
+
+    <!-- Table 1 -->
+    <table id="table-1" class="middle">
+        <tr>
+            <td id="t11">left</td>
+            <td class="center" id="t12">center</td>
+            <td class="right" id="t13">right</td>
+        </tr>
+        <tr>
+            <td>left</td>
+            <td class="center">center</td>
+            <td class="right">right</td>
+        </tr>
+        <tr>
+            <td>left</td>
+            <td class="center">center</td>
+            <td class="right">right</td>
+        </tr>
+    </table>
+
+    <!-- Table 2 -->
+    <table id="table-2" class="middle">
+        <tr>
+            <td id="t21" colspan="6" class="center"> </td>
+        </tr>
+        <tr>
+            <td> </td><td> </td><td> </td><td> </td><td> </td><td> </td>
+        </tr>
+        <tr>
+            <td> </td><td> </td><td> </td><td> </td><td> </td><td> </td>
+        </tr>
+        <tr>
+            <td> </td><td> </td><td> </td><td> </td><td> </td><td> </td>
+        </tr>
+        <tr>
+            <td> </td><td> </td><td> </td><td> </td><td> </td><td> </td>
+        </tr>
+        <tr>
+            <td> </td><td> </td><td> </td><td> </td><td> </td><td> </td>
+        </tr>
+    </table>
+
+    <!-- Table 3 -->
+    <table id="table-3" class="middle">
+        <tr class="green">
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+        <tr>
+            <td> </td>
+            <td id="t-image" class="center">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Michael_Jordan_in_1987.jpg" alt="Jumpman" width="300">
+            </td>
+            <td> </td>
+        </tr>
+        <tr class="blue">
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+    </table>
 
 </body>
 
