--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
         <tr>
             <td> </td>
             <td id="t-image" class="center">
-                <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Michael_Jordan_in_1987.jpg" alt="Jumpman" width="300">
+                <img src="https://wallpapercave.com/wp/JjnZdf5.jpg" alt="Jumpman" width="300">
             </td>
             <td> </td>
         </tr>
